change: getting rid of config-server.